frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-frontend
  namespace: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-frontend
  template:
    metadata:
      labels:
        app: website-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/marafis/frontend:86e8471
          ports:
            - containerPort: 80
