frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-wildcard
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  rules:
    - host: marafis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-frontend
                port:
                  number: 80

    - host: www.marafis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website-frontend
                port:
                  number: 80
